ajustes conteudo das aulas

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,8 @@
 			"extensions": [
 				"GitHub.copilot",
 				"GitHub.copilot-chat",
-				"antfu.slidev"
+				"antfu.slidev",
+				"mechatroner.rainbow-csv"
 			]
 		}
 	}
