--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,5 +35,5 @@
 			]
 		}
 	}
-	//"postCreateCommand": "curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash - && sudo apt-get install -y nodejs && npm init slidev@latest"
+	"postCreateCommand": "pip install -r requirements.txt"
 }
